# Zorro

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  rng.hpp  test.cpp  zorro.hpp
R/: .clangd  .gitignore  DESCRIPTION  LICENSE  NAMESPACE  bench.R
R/R/: zorro.R
R/man/: zorro_bernoulli.Rd  zorro_create.Rd  zorro_exponential.Rd  zorro_gamma.Rd  zorro_normal.Rd  zorro_student_t.Rd  zorro_uniform.Rd
R/src/: Makevars  zorro_r.cpp
R/src/zorro/: zorro.hpp
aws/: bench.sh  remote-setup.sh
benchmarks/: asm  benchmark_distributions.cpp  dieharder_stream.cpp  llvm-mca-tool.sh  llvm_mca_harness.cpp  quality_tests.cpp  raw_stream_sources.hpp  run_dieharder.sh  run_llvm_mca.sh  run_testu01.sh  stephanfr_adapters.cpp  stephanfr_adapters.hpp  test_avx512_determinism.cpp  testu01_runner.cpp  zorro_benchmark_kernels.cpp  zorro_benchmark_kernels.hpp
docs/: avx_intrinsics_reference.md  xoshiro256pp_avx_4x2.md
examples/: high_dimensional_random_variables.cpp  importance_sampling.cpp  normal_transform_comparison.cpp  print.cpp
include/zorro/: zorro.hpp
tests/: exponential_transform_tests.cpp  normal_transform_tests.cpp
